# telegram-curses

./: .gitignore  .gitmodules  Action.hpp  AttachDocumentMenu.cpp  AttachDocumentMenu.hpp  AttachMenu.cpp  AttachMenu.hpp  AttachType.h  CMakeLists.txt  ChatInfoWindow.cpp  ChatInfoWindow.hpp  ChatManager.cpp  ChatManager.hpp  ChatPhotoListWindow.hpp  ChatPhotoWindow.hpp  ChatSearchWindow.cpp  ChatSearchWindow.hpp  ChatWindow.cpp  ChatWindow.hpp  ColorScheme.cpp  ColorScheme.hpp  CommandLineWindow.hpp  CommonGroupsWindow.cpp  CommonGroupsWindow.hpp  ComposeWindow.cpp  ComposeWindow.hpp  ConfigWindow.cpp  ConfigWindow.hpp  Debug.cpp  Debug.hpp  DebugInfoWindow.cpp  DebugInfoWindow.hpp  DialogListWindow.cpp  DialogListWindow.hpp  ErrorWindow.hpp  FieldEditWindow.hpp  FileManager.cpp  FileManager.hpp  FileSelectionWindow.hpp  FolderSelectionWindow.hpp  (+75 more)
.github/workflows/: cmake-single-platform.yml
common-windows/: Action.hpp  FieldEditWindow.hpp  FileSelectionWindow.hpp  LoadingWindow.hpp  MenuWindow.cpp  MenuWindowPad.hpp  MenuWindowView.hpp
managers/: ChatManager.hpp  FileManager.cpp  FileManager.hpp  GlobalParameters.cpp  GlobalParameters.hpp  NotificationManager.cpp  NotificationManager.hpp  StickerManager.hpp
port/: dirlist.cpp  dirlist.h
settings-menu/: AboutWindow.cpp  AboutWindow.hpp  AccountSettingsWindow.cpp  AccountSettingsWindow.hpp  ActiveSessionWindow.cpp  ActiveSessionWindow.hpp  ActiveSessionsWindow.cpp  ActiveSessionsWindow.hpp  AdvancedSettingsWindow.cpp  AdvancedSettingsWindow.hpp  ChangeScopeNotificationsSettingsWindow.cpp  ChangeScopeNotificationsSettingsWindow.hpp  ChatSettingsWindow.cpp  ChatSettingsWindow.hpp  FoldersSettingsWindow.cpp  FoldersSettingsWindow.hpp  MainSettingsWindow.cpp  MainSettingsWindow.hpp  NotificationsSettingsWindow.cpp  NotificationsSettingsWindow.hpp  PrivacyAndSecuritySettingsWindow.cpp  PrivacyAndSecuritySettingsWindow.hpp  ScopeNotificationsSettingsWindow.cpp  ScopeNotificationsSettingsWindow.hpp
windows/: BackendNotcurses.cpp  BackendNotcurses.h  BackendTickit.cpp  BackendTickit.h  BorderedWindow.cpp  BorderedWindow.hpp  EditorWindow.cpp  EditorWindow.hpp  EmptyWindow.cpp  EmptyWindow.hpp  Input.cpp  Input.hpp  LogWindow.hpp  Markup.hpp  OneLineInputWindow.cpp  OneLineInputWindow.hpp  Output.cpp  Output.hpp  PadWindow.cpp  PadWindow.hpp  Screen.cpp  Screen.hpp  SelectionWindow.hpp  TextEdit.cpp  TextEdit.hpp  ViewWindow.cpp  ViewWindow.hpp  Window.cpp  Window.hpp  WindowLayout.cpp  WindowLayout.hpp  WindowLayoutSplit.hpp  editorwindow.cpp  editorwindow.h  log-window.h  markup.h  padwindow.cpp  padwindow.h  screen.cpp  screen.h  (+10 more)
